Fix Dockerfile COPY commands